--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {
 }
 .card {
   width:100%;
-  max-width:700px;
+  max-width:750px;
   background:#111;
   border:1px solid rgba(255,215,0,0.25);
   border-radius:30px;
@@ -34,8 +34,8 @@ body {
 /* قسم أعلى البطاقة */
 .top-section {
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
+  justify-content:flex-start;
+  align-items:flex-start;
   gap:30px;
   margin-bottom: 20px;
 }
@@ -92,31 +92,43 @@ h1.name {
   100% { transform: translateY(-6px); }
 }
 
-/* جزء المعلومات بجانب الصورة */
+/* جزء المعلومات بالأسئلة على اليمين */
 .info-box {
   display: flex;
   flex-direction: column;
-  gap:10px;
-  margin-top:10px;
+  gap:15px;
+  align-items: flex-end;
+  margin-top:0;
 }
-.info-item {
+
+.info-item button {
   background: rgba(255,215,0,0.1);
   border: 1px solid #f5d380;
   border-radius:12px;
   padding:8px 12px;
   cursor: pointer;
+  color:#f5d380;
+  font-weight:600;
   display: flex;
   align-items: center;
-  gap:8px;
-  transition: 0.3s;
+  gap:6px;
+  transition:0.3s;
 }
-.info-item:hover {
+.info-item button:hover {
   background: rgba(255,215,0,0.2);
 }
+
 .info-text {
-  display: none;
-  font-weight: bold;
-  color: #fff;
+  margin-top:6px;
+  background: rgba(255,215,0,0.1);
+  border:1px solid #f5d380;
+  border-radius:10px;
+  padding:6px 10px;
+  display:none;
+  color:#fff;
+  text-align:right;
+  min-width:100px;
+  transition:0.3s;
 }
 
 /* الاقتباسات */
@@ -164,10 +176,6 @@ h1.name {
 @keyframes fadeIn{
   0%{opacity:0; transform:scale(0.95);}
   100%{opacity:1; transform:scale(1);}
-}
-@keyframes glowAnim{
-  0%{transform:translateX(-50%) scale(1);}
-  100%{transform:translateX(-50%) scale(1.05);}
 }
 
 /* قسم الفيديوهات */
@@ -236,9 +244,9 @@ h1.name {
 </head>
 <body>
 <div class="card">
-  <div class="glow"></div>
 
   <div class="top-section">
+    <!-- الجزء الأيسر: الصورة والاسم -->
     <div class="left-box">
       <div class="avatar">
         <img src="https://img.alfrsantv.com/img/f176550047297151.png" alt="Avatar"/>
@@ -248,11 +256,24 @@ h1.name {
       <div class="wave-text">أم لسان طويل</div>
     </div>
 
+    <!-- الجزء الأيمن: الأسئلة والأجوبة -->
     <div class="info-box">
-      <div class="info-item" onclick="toggleInfo(this)">🌍 البلد <span class="info-text">مصر</span></div>
-      <div class="info-item" onclick="toggleInfo(this)">🎨 اللون المفضل <span class="info-text">ذهبي</span></div>
-      <div class="info-item" onclick="toggleInfo(this)">🎵 الموسيقى <span class="info-text">كلاسيكي</span></div>
-      <div class="info-item" onclick="toggleInfo(this)">😊 المزاج <span class="info-text">هادئ</span></div>
+      <div class="info-item">
+        <button onclick="toggleAnswer(this)">🌍 البلد</button>
+        <div class="info-text">مصر</div>
+      </div>
+      <div class="info-item">
+        <button onclick="toggleAnswer(this)">🎨 اللون المفضل</button>
+        <div class="info-text">ذهبي</div>
+      </div>
+      <div class="info-item">
+        <button onclick="toggleAnswer(this)">🎵 الموسيقى</button>
+        <div class="info-text">كلاسيكي</div>
+      </div>
+      <div class="info-item">
+        <button onclick="toggleAnswer(this)">😊 المزاج</button>
+        <div class="info-text">هادئ</div>
+      </div>
     </div>
   </div>
 
@@ -281,9 +302,9 @@ h1.name {
 </div>
 
 <script>
-function toggleInfo(el) {
-  const text = el.querySelector('.info-text');
-  text.style.display = text.style.display === 'inline' ? 'none' : 'inline';
+function toggleAnswer(btn){
+  const answer = btn.nextElementSibling;
+  answer.style.display = answer.style.display === "block" ? "none" : "block";
 }
 </script>
 
