--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Dullc Edition</title>
+<title>Dullc</title>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800&display=swap');
 
@@ -98,6 +98,7 @@ h1.name {
   align-items: flex-end;
   gap:12px;
   width:220px;
+  direction: rtl;
 }
 
 .info-item {
@@ -110,11 +111,11 @@ h1.name {
   padding:6px 12px;
 }
 
+/* السؤال والإجابة */
 .info-item span.question {
   font-weight:600;
   color:#f5d380;
 }
-
 .info-item span.answer {
   color:#fff;
 }
@@ -124,45 +125,17 @@ h1.name {
   margin-top:18px;
   font-size:17px;
   line-height:1.9;
-  opacity:0;
   background:rgba(255,215,0,0.05);
   padding:15px;
   border-radius:20px;
-  border:1px solid rgba(255,215,0.12);
-  box-shadow:0 0 12px rgba(255,215,0.07);
-  animation:fadeInUp 1s ease forwards 0.5s;
-}
-.quotes span{
-  display:block;
-  margin-bottom:10px;
-  opacity:0;
-  animation:quoteAppear 0.8s ease forwards;
-}
-.quotes span:nth-child(1){animation-delay:0.7s}
-.quotes span:nth-child(2){animation-delay:1s}
-@keyframes quoteAppear{
-  0%{opacity:0; transform:translateY(15px);}
-  100%{opacity:1; transform:translateY(0);}
+  border:1px solid rgba(255,215,0,0.12);
+  box-shadow:0 0 12px rgba(255,215,0,0.07);
 }
 
 .heart {
   font-size:40px;
   margin-top:15px;
-  animation:pulse 1.4s infinite ease-in-out, fadeInUp 1s ease forwards 1.2s;
-  opacity:0;
-}
-@keyframes pulse {
-  0% {transform:scale(1); opacity:0.8;}
-  50% {transform:scale(1.3); opacity:1;}
-  100% {transform:scale(1); opacity:0.8;}
-}
-@keyframes fadeInUp{
-  0%{opacity:0; transform:translateY(25px);}
-  100%{opacity:1; transform:translateY(0);}
-}
-@keyframes fadeIn{
-  0%{opacity:0; transform:scale(0.95);}
-  100%{opacity:1; transform:scale(1);}
+  opacity:1;
 }
 
 /* قسم الفيديوهات */
@@ -210,13 +183,7 @@ h1.name {
   margin:0 10px;
   border:1px solid rgba(255,215,0,0.25);
   box-shadow:0 0 15px rgba(255,215,0.2);
-  opacity:0;
-  transform:translateY(20px);
-  animation:fadeInUp .8s ease forwards;
 }
-.video-box:nth-child(1){animation-delay:.1s}
-.video-box:nth-child(2){animation-delay:.25s}
-.video-box:nth-child(3){animation-delay:.4s}
 .video-box iframe{
   width:150px;
   height:260px;
