--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {
 }
 .card {
   width:100%;
-  max-width:800px;
+  max-width:600px;
   background:#111;
   border:1px solid rgba(255,215,0,0.25);
   border-radius:30px;
@@ -33,17 +33,14 @@ body {
 
 .top-section {
   display: flex;
-  justify-content:flex-start;
-  align-items:flex-start;
-  gap:30px;
+  width: 100%;
   margin-bottom: 20px;
 }
-
-/* الجزء الأيسر: الصورة والاسم */
 .left-box {
   display: flex;
   flex-direction: column;
   align-items: center; 
+  margin-right: auto;  
 }
 
 .avatar {
@@ -81,46 +78,18 @@ h1.name {
   font-size:14px;
   text-align:center;
   margin:2px 0;
-  animation:wave 2s ease-in-out infinite alternate;
-}
-.wave-text:nth-child(3) {
-  animation-delay:0.3s;
-}
-@keyframes wave {
-  0% { transform: translateY(0); }
-  100% { transform: translateY(-6px); }
 }
 
-/* الجزء الأيمن: الأسئلة والإجابات أفقي */
-.info-box {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  gap:12px;
-  width:220px;
-  direction: rtl;
+.glow {
+  position:absolute;
+  top:-40%; left:50%; transform:translateX(-50%);
+  width:400px; height:400px;
+  background: radial-gradient(circle, rgba(255,215,0,0.25), transparent 70%);
+  filter:blur(70px);
+  z-index:0;
+  animation:glowAnim 3s ease-in-out infinite alternate;
 }
 
-.info-item {
-  display: flex;
-  justify-content: flex-end;
-  gap:8px;
-  background: rgba(255,215,0,0.05);
-  border:1px solid #f5d380;
-  border-radius:12px;
-  padding:6px 12px;
-}
-
-/* السؤال والإجابة */
-.info-item span.question {
-  font-weight:600;
-  color:#f5d380;
-}
-.info-item span.answer {
-  color:#fff;
-}
-
-/* الاقتباسات */
 .quotes{
   margin-top:18px;
   font-size:17px;
@@ -128,8 +97,13 @@ h1.name {
   background:rgba(255,215,0,0.05);
   padding:15px;
   border-radius:20px;
-  border:1px solid rgba(255,215,0,0.12);
-  box-shadow:0 0 12px rgba(255,215,0,0.07);
+  border:1px solid rgba(255,215,0.12);
+  box-shadow:0 0 12px rgba(255,215,0.07);
+}
+.quotes span{
+  display:block;
+  margin-bottom:10px;
+  opacity:1;
 }
 
 .heart {
@@ -138,7 +112,32 @@ h1.name {
   opacity:1;
 }
 
-/* قسم الفيديوهات */
+/* معلومات جهة اليمين */
+.info-box {
+  display:flex;
+  flex-direction:column;
+  align-items:flex-end;
+  gap:10px;
+  margin-left:20px;
+  direction:rtl;
+}
+.info-item {
+  display:flex;
+  justify-content:flex-end;
+  gap:8px;
+  padding:5px 10px;
+  border:1px solid #f5d380;
+  border-radius:12px;
+  background: rgba(255,215,0,0.05);
+}
+.info-item span.question {
+  font-weight:600;
+  color:#f5d380;
+}
+.info-item span.answer {
+  color:#fff;
+}
+
 .videos {
   width:100%;
   margin-top:20px;
@@ -198,9 +197,9 @@ h1.name {
 </head>
 <body>
 <div class="card">
+  <div class="glow"></div>
 
   <div class="top-section">
-    <!-- الجزء الأيسر: الصورة والاسم -->
     <div class="left-box">
       <div class="avatar">
         <img src="https://img.alfrsantv.com/img/f176550047297151.png" alt="Avatar"/>
@@ -210,7 +209,7 @@ h1.name {
       <div class="wave-text">أم لسان طويل</div>
     </div>
 
-    <!-- الجزء الأيمن: الأسئلة والإجابات -->
+    <!-- معلومات جهة اليمين -->
     <div class="info-box">
       <div class="info-item">
         <span class="question">🌍 البلد:</span>
