--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ h1.name {
   background:rgba(255,215,0,0.05);
   padding:15px;
   border-radius:20px;
-  border:1px solid rgba(255,215,0.12);
+  border:1px solid rgba(255,215,0,0.12);
   box-shadow:0 0 12px rgba(255,215,0.07);
 }
 .quotes span{
@@ -112,7 +112,7 @@ h1.name {
   opacity:1;
 }
 
-/* معلومات جهة اليمين */
+/* معلومات جهة اليمين بدون أي تأثيرات */
 .info-box {
   display:flex;
   flex-direction:column;
@@ -126,17 +126,7 @@ h1.name {
   justify-content:flex-end;
   align-items:center;
   gap:8px;
-  padding:8px 15px;
-  border-radius:12px;
-  background: rgba(255,215,0,0.1);
-  border:1px solid #f5d380;
   min-width:180px;
-  transition:all 0.3s ease;
-}
-.info-item:hover {
-  background:#f5d380;
-  color:#000;
-  cursor:default;
 }
 .info-item span.question {
   font-weight:600;
@@ -218,22 +208,22 @@ h1.name {
       <div class="wave-text">أم لسان طويل</div>
     </div>
 
-    <!-- معلومات جهة اليمين -->
+    <!-- معلومات جهة اليمين بدون أي تأثير -->
     <div class="info-box">
       <div class="info-item">
-        <span class="question">🌍 البلد:</span>
+        <span class="question">البلد:</span>
         <span class="answer">مصر</span>
       </div>
       <div class="info-item">
-        <span class="question">🎨 اللون المفضل:</span>
+        <span class="question">اللون المفضل:</span>
         <span class="answer">ذهبي</span>
       </div>
       <div class="info-item">
-        <span class="question">🎵 الموسيقى:</span>
+        <span class="question">الموسيقى:</span>
         <span class="answer">كلاسيكي</span>
       </div>
       <div class="info-item">
-        <span class="question">😊 المزاج:</span>
+        <span class="question">المزاج:</span>
         <span class="answer">هادئ</span>
       </div>
     </div>
