--- a/index.html
+++ b/index.html
@@ -42,6 +42,24 @@ body {
   align-items: center; 
   margin-right: auto;  
 }
+.right-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  margin-left: 20px;
+}
+.info-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 8px;
+  font-size: 14px;
+}
+.info-item img {
+  width: 20px;
+  height: 20px;
+  margin-left: 6px;
+}
 
 .avatar {
   width:130px;
@@ -103,49 +121,20 @@ h1.name {
   margin-top:18px;
   font-size:17px;
   line-height:1.9;
-  opacity:0;
   background:rgba(255,215,0,0.05);
   padding:15px;
   border-radius:20px;
   border:1px solid rgba(255,215,0,0.12);
   box-shadow:0 0 12px rgba(255,215,0,0.07);
-  animation:fadeInUp 1s ease forwards 0.5s;
 }
 .quotes span{
   display:block;
   margin-bottom:10px;
-  opacity:0;
-  animation:quoteAppear 0.8s ease forwards;
-}
-.quotes span:nth-child(1){animation-delay:0.7s}
-.quotes span:nth-child(2){animation-delay:1s}
-@keyframes quoteAppear{
-  0%{opacity:0; transform:translateY(15px);}
-  100%{opacity:1; transform:translateY(0);}
 }
 
 .heart {
   font-size:40px;
   margin-top:15px;
-  animation:pulse 1.4s infinite ease-in-out, fadeInUp 1s ease forwards 1.2s;
-  opacity:0;
-}
-@keyframes pulse {
-  0% {transform:scale(1); opacity:0.8;}
-  50% {transform:scale(1.3); opacity:1;}
-  100% {transform:scale(1); opacity:0.8;}
-}
-@keyframes fadeInUp{
-  0%{opacity:0; transform:translateY(25px);}
-  100%{opacity:1; transform:translateY(0);}
-}
-@keyframes fadeIn{
-  0%{opacity:0; transform:scale(0.95);}
-  100%{opacity:1; transform:scale(1);}
-}
-@keyframes glowAnim{
-  0%{transform:translateX(-50%) scale(1);}
-  100%{transform:translateX(-50%) scale(1.05);}
 }
 
 .videos {
@@ -192,13 +181,7 @@ h1.name {
   margin:0 10px;
   border:1px solid rgba(255,215,0,0.25);
   box-shadow:0 0 15px rgba(255,215,0.2);
-  opacity:0;
-  transform:translateY(20px);
-  animation:fadeInUp .8s ease forwards;
 }
-.video-box:nth-child(1){animation-delay:.1s}
-.video-box:nth-child(2){animation-delay:.25s}
-.video-box:nth-child(3){animation-delay:.4s}
 .video-box iframe{
   width:150px;
   height:260px;
@@ -209,7 +192,6 @@ h1.name {
   transition:.25s ease;
   box-shadow:0 0 18px rgba(255,215,0,0.4);
 }
-
 
 </style>
 </head>
@@ -225,6 +207,14 @@ h1.name {
       <h1 class="name">ɖƲιιȻ</h1>
       <div class="wave-text">الحربوقة 🐍</div>
       <div class="wave-text">أم لسان طويل</div>
+    </div>
+    
+    <div class="right-info">
+      <div class="info-item"><span>مصر</span><img src="https://img.icons8.com/ios-filled/50/ffffff/world.png" alt="البلد"/></div>
+      <div class="info-item"><span>أصفر</span><img src="https://img.icons8.com/ios-filled/50/ffffff/paint-palette.png" alt="اللون المفضل"/></div>
+      <div class="info-item"><span>روك</span><img src="https://img.icons8.com/ios-filled/50/ffffff/musical-notes.png" alt="الموسيقى"/></div>
+      <div class="info-item"><span>مرتاح</span><img src="https://img.icons8.com/ios-filled/50/ffffff/smiling.png" alt="المزاج"/></div>
+      <div class="info-item"><span>Chat</span><img src="https://img.icons8.com/ios-filled/50/ffffff/chat.png" alt="الشات"/></div>
     </div>
   </div>
 
