--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {
 }
 .card {
   width:100%;
-  max-width:600px;
+  max-width:800px;
   background:#111;
   border:1px solid rgba(255,215,0,0.25);
   border-radius:30px;
@@ -33,7 +33,7 @@ body {
 .top-section {
   display: flex;
   width: 100%;
-  margin-bottom: 20px;
+  justify-content: flex-start;
   gap: 20px;
 }
 .left-box {
@@ -85,18 +85,21 @@ h1.name {
   100% { transform: translateY(-6px); }
 }
 
+/* المعلومات على اليمين */
 .info-section {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
+  align-items: flex-end;
+  justify-content: flex-start;
   gap:12px;
+  margin-left:auto; /* يجبرها على اليمين */
 }
 
 .info-row {
   display: flex;
   align-items: center;
   gap:10px;
+  justify-content: flex-end;
 }
 .info-row button {
   background:#f5d380;
@@ -113,6 +116,7 @@ h1.name {
   font-size:15px;
 }
 
+/* باقي الكود كما هو للفيديوهات والاقتباسات */
 .quotes{
   margin-top:18px;
   font-size:17px;
@@ -120,14 +124,14 @@ h1.name {
   background:rgba(255,215,0,0.05);
   padding:15px;
   border-radius:20px;
-  border:1px solid rgba(255,215,0.12);
+  border:1px solid rgba(255,215,0,0.12);
 }
 
 .videos {
   width:100%;
   margin-top:20px;
   padding-top:10px;
-  border-top:1px solid rgba(255,215,0.25);
+  border-top:1px solid rgba(255,215,0,0.25);
 }
 .videos-title{
   background:#f5d380;
