--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {
 }
 .card {
   width:100%;
-  max-width:800px;
+  max-width:600px;
   background:#111;
   border:1px solid rgba(255,215,0,0.25);
   border-radius:30px;
@@ -33,13 +33,13 @@ body {
 .top-section {
   display: flex;
   width: 100%;
-  justify-content: flex-start;
-  gap: 20px;
+  margin-bottom: 20px;
 }
 .left-box {
   display: flex;
   flex-direction: column;
   align-items: center; 
+  margin-right: auto;  
 }
 
 .avatar {
@@ -51,18 +51,12 @@ body {
   background:#000;
   box-shadow:0 0 18px rgba(255,215,0,0.4);
   overflow:hidden;
-  transition: transform 0.4s ease, box-shadow 0.4s ease;
 }
 .avatar img {
   width:100%;
   height:100%;
   border-radius:50%;
   object-fit:cover;
-  transition: transform 0.5s ease, box-shadow 0.5s ease;
-}
-.avatar:hover img {
-  transform: scale(1.25);
-  box-shadow:0 0 30px rgba(255,215,0,0.6);
 }
 
 h1.name {
@@ -77,15 +71,37 @@ h1.name {
   font-size:14px;
   text-align:center;
   margin:2px 0;
-  animation:wave 2s ease-in-out infinite alternate;
 }
 
-@keyframes wave {
-  0% { transform: translateY(0); }
-  100% { transform: translateY(-6px); }
+.glow {
+  position:absolute;
+  top:-40%; left:50%; transform:translateX(-50%);
+  width:400px; height:400px;
+  background: radial-gradient(circle, rgba(255,215,0,0.25), transparent 70%);
+  filter:blur(70px);
+  z-index:0;
 }
 
-/* المعلومات على اليمين */
+.quotes{
+  margin-top:18px;
+  font-size:17px;
+  line-height:1.9;
+  background:rgba(255,215,0,0.05);
+  padding:15px;
+  border-radius:20px;
+  border:1px solid rgba(255,215,0,0.12);
+  box-shadow:0 0 12px rgba(255,215,0,0.07);
+}
+.quotes span{
+  display:block;
+  margin-bottom:10px;
+}
+
+.heart {
+  font-size:40px;
+  margin-top:15px;
+}
+
 .info-section {
   display: flex;
   flex-direction: column;
@@ -116,17 +132,6 @@ h1.name {
   font-size:15px;
 }
 
-/* باقي الكود كما هو للفيديوهات والاقتباسات */
-.quotes{
-  margin-top:18px;
-  font-size:17px;
-  line-height:1.9;
-  background:rgba(255,215,0,0.05);
-  padding:15px;
-  border-radius:20px;
-  border:1px solid rgba(255,215,0,0.12);
-}
-
 .videos {
   width:100%;
   margin-top:20px;
@@ -147,19 +152,6 @@ h1.name {
   overflow-x:auto;
   white-space:nowrap;
   padding-bottom:10px;
-  scrollbar-width:thin;
-  scrollbar-color:#f5d380 #222;
-}
-.videos-scroll::-webkit-scrollbar{
-  height:8px;
-}
-.videos-scroll::-webkit-scrollbar-track{
-  background:#222;
-  border-radius:10px;
-}
-.videos-scroll::-webkit-scrollbar-thumb{
-  background:#f5d380;
-  border-radius:10px;
 }
 .video-box{
   display:inline-block;
@@ -180,13 +172,12 @@ h1.name {
 .video-box:hover{
   transform:scale(1.07);
   transition:.25s ease;
-  box-shadow:0 0 18px rgba(255,215,0.4);
+  box-shadow:0 0 18px rgba(255,215,0,0.4);
 }
 </style>
 </head>
 <body>
 <div class="card">
-  <div class="glow"></div>
 
   <div class="top-section">
     <div class="left-box">
@@ -226,6 +217,8 @@ h1.name {
     <span>أحبك فقط بسبب شخصيتك، وليس لما تمتلكه…</span>
     <span>أحبك لما تصنعه بي، ولما تضيفه لروحي وجودك.</span>
   </div>
+
+  <div class="heart">❤</div>
 
   <div class="videos">
     <div class="videos-title">فيديوهاتي</div>
