--- a/index.html
+++ b/index.html
@@ -42,24 +42,28 @@ body {
 
 .info-row {
   display:flex;
-  justify-content:space-between;
+  flex-direction:row; /* يجعل السؤال قبل الإجابة */
+  justify-content:flex-start;
+  gap:10px;
   align-items:center;
   background:#1a1a1a;
   border:1px solid rgba(255,215,0,0.25);
   padding:10px 14px;
   border-radius:12px;
-  min-width:180px;
+  min-width:170px;
 }
 
-.info-row span.question {
+.question {
   font-weight:700;
   font-size:15px;
   color:#f5d380;
+  min-width:60px;
 }
 
-.info-row span.answer {
+.answer {
   font-size:15px;
   color:#fff;
+  text-align:right;
 }
 
 .info-row a {
@@ -282,25 +286,24 @@ h1.name {
     <div class="info-box">
 
       <div class="info-row">
-  <span class="question">البلد:</span>
-  <span class="answer">مصر</span>
-</div>
+        <span class="question">البلد:</span>
+        <span class="answer">مصر</span>
+      </div>
 
-<div class="info-row">
-  <span class="question">اللون:</span>
-  <span class="answer">بينك</span>
-</div>
+      <div class="info-row">
+        <span class="question">اللون:</span>
+        <span class="answer">بينك</span>
+      </div>
 
-<div class="info-row">
-  <span class="question">المزاج:</span>
-  <span class="answer">رايق</span>
-</div>
+      <div class="info-row">
+        <span class="question">المزاج:</span>
+        <span class="answer">رايق</span>
+      </div>
 
-<div class="info-row">
-  <span class="question">الشات:</span>
-  <a href="https://xat.com/melodylovers" target="_blank">شات ميلودى</a>
-</div>
-
+      <div class="info-row">
+        <span class="question">الشات:</span>
+        <a href="https://xat.com/melodylovers" target="_blank">شات ميلودى</a>
+      </div>
 
     </div>
 
@@ -320,7 +323,7 @@ h1.name {
         <iframe src="https://www.youtube.com/embed/1uMZhJeXLYw" allowfullscreen></iframe>
       </div>
       <div class="video-box">
-        <iframe src="https://www.youtube.com/embed/mcp5fsJ8dw8" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.youtube.com/embed/mcp5fsJ8dw8" allowfullscreen></iframe>
       </div>
       <div class="video-box">
         <iframe src="https://www.youtube.com/embed/HVgy8Ge0GJQ" allowfullscreen></iframe>
